@@ -1,3 +1,14 @@
+*** 19991009_1 by lusky
+added -DNDEBUG back to CFLAGS (jl)
+put channel topic back before names (db)
+another umode hack fix (db)
+fixed a broken cast for IRIX (jl)
+
+
+*** 19990928_1 by lusky
+another +o hack fix (db)
+
+
 *** 19990927_1 by lusky
 This patch corrects a case where a normal user can oper themselves (db)
 also corrects a possible core due to a bogus H or L line. (neph)
